scrollbar color, fix spacebar in player

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -41,7 +41,7 @@ $scrollbar-width: 16px;
 		border: 4px solid transparent;
 		border-radius: 8px;
 		background-clip: content-box;
-		background-color: var(--text-secondary);
+		background-color: var(--text-placeholder);
 	}
 
 	&::-webkit-scrollbar-thumb:hover {
